<resources>
    <string name="app_name">ExActHealth</string>
    <string name="food_details_title">Food Details *</string>
    <string name="enter_food_name_hint">Enter Food Name</string>
    <string name="select_date_and_time_title"><![CDATA[Select Date & Time of Meal]]></string>
    <string name="date_hint">Feb 12, 2024</string>
    <string name="time_hint">10:29</string>
    <string name="images_title">Images</string>
    <string name="save_entry">Save Entry</string>
    <string name="fats">Fats (g)</string>
    <string name="carbs">Carbs (g)</string>
    <string name="protein">Protein (g)</string>
    <string name="macros">Macros (gm) *</string>
    <string name="view_selected_images">View selected images</string>
    <string name="pick_images">Pick Images</string>
    <string name="add_to_favorite">Add to Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="selected_images">Selected Images</string>
    <string name="profile">Profile</string>
    <string name="user_details_text_view">User Details</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="calendar">Calendar</string>
    <string name="health">Health</string>
    <string name="summary">Summary</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="required">(* Required)</string>
</resources>