<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/food_details_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:text="@string/food_details_title">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/food_details_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_details_text_view"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:contentPaddingTop="10dp"
        app:contentPaddingBottom="5dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/food_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/food_name_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:hint="@string/enter_food_name_hint"
                android:inputType="textPersonName"
                android:autofillHints="name">
            </EditText>

            <LinearLayout
                android:id="@+id/food_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/food_name_text_edit"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:gravity="center_horizontal"
                android:weightSum="12">

                <TextView
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/select_date_and_time_title"
                    android:textSize="16sp">
                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/date_hint"

                    app:boxBackgroundColor="@color/mid_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="16sp">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_hint"

                    app:boxBackgroundColor="@color/mid_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="16sp">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>