<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".activities.AddFavoriteFoodActivity">

    <RelativeLayout
        android:id="@+id/favorite_foods_toolbar_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:id="@+id/back_to_favorite_food_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/back_to_favorite_food_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button">
            </ImageView>

            <TextView
                android:id="@+id/back_to_favorite_food_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/back_to_favorite_food_icon"
                android:layout_alignBottom="@+id/back_to_favorite_food_icon"
                android:layout_alignTop="@+id/back_to_favorite_food_icon"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="Back"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="16sp">
            </TextView>

        </RelativeLayout>

        <TextView
            android:id="@+id/add_your_favorite_food_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="Add your Food Details"
            android:textSize="16sp"
            android:textStyle="bold">
        </TextView>

    </RelativeLayout>

    <TextView
        android:id="@+id/favorite_food_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite_foods_toolbar_layout_2"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/food_details_title">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/favorite_food_name_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite_food_details_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/favorite_food_name_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/favorite_food_name_text_edit"
                android:theme="@style/DialogTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_food_name_hint"
                android:textSize="14sp"
                android:backgroundTint="@color/light_gray"
                android:inputType="textPersonName"
                android:autofillHints="name">
            </EditText>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/favorite_food_images_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite_food_name_card_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/images_title">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/food_details_images_card_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite_food_images_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/favorite_food_images_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/favorite_food_pick_images_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:backgroundTint="@color/white"
                android:text="@string/pick_images"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="normal">
            </Button>

            <View
                android:layout_width="match_parent"
                android:layout_below="@+id/favorite_food_pick_images_button"
                android:layout_height="1dp"
                android:background="@color/mid_gray">
            </View>

            <Button
                android:id="@+id/favorite_food_selected_images_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/favorite_food_pick_images_button"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:backgroundTint="@color/white"
                android:text="@string/view_selected_images"
                android:textColor="@color/light_red"
                android:textSize="14sp"
                android:textStyle="normal"
                android:enabled="false">
            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/favorite_food_macros_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_details_images_card_view_2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/macros">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/favorite_food_macros_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite_food_macros_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/favorite_food_macros_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/favorite_food_protein_text_edit"
                android:theme="@style/DialogTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:gravity="center_vertical"
                android:hint="@string/protein"
                android:textSize="14sp"
                android:backgroundTint="@color/light_gray"
                android:inputType="number"
                android:importantForAutofill="no">
            </EditText>

            <EditText
                android:id="@+id/favorite_food_carbs_text_edit"
                android:theme="@style/DialogTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/favorite_food_protein_text_edit"
                android:paddingBottom="16dp"
                android:gravity="center_vertical"
                android:hint="@string/carbs"
                android:textSize="14sp"
                android:backgroundTint="@color/light_gray"
                android:inputType="number"
                android:importantForAutofill="no">
            </EditText>

            <EditText
                android:id="@+id/favorite_food_fats_text_edit"
                android:theme="@style/DialogTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/favorite_food_carbs_text_edit"
                android:paddingBottom="16dp"
                android:gravity="center_vertical"
                android:hint="@string/fats"
                android:textSize="14sp"
                android:backgroundTint="@color/light_gray"
                android:inputType="number"
                android:importantForAutofill="no">
            </EditText>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/favorite_food_save_entry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite_food_macros_card_view"
        android:gravity="center"
        android:layout_margin="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:backgroundTint="@color/red"
        android:text="@string/save_entry"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:cornerRadius="5dp">
    </Button>

</RelativeLayout>