<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_gray"
    tools:context=".AddFoodActivity">

    <RelativeLayout
        android:id="@+id/food_details_toolbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@+id/food_details_title"
        android:layout_alignEnd="@+id/food_details_title">

        <RelativeLayout
            android:id="@+id/back_to_calendar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/back_to_calendar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button">
            </ImageView>

            <TextView
                android:id="@+id/back_to_calendar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/back_to_calendar_icon"
                android:layout_alignBottom="@+id/back_to_calendar_icon"
                android:layout_alignTop="@+id/back_to_calendar_icon"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="Calendar"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="16sp">
            </TextView>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_from_favorites_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/add_from_favorites_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="Add from Favorites"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/add_from_favorites_icon"
                app:layout_constraintEnd_toStartOf="@+id/add_from_favorites_icon"
                app:layout_constraintTop_toTopOf="@+id/add_from_favorites_icon">
            </TextView>

            <ImageView
                android:id="@+id/add_from_favorites_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/forward_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/food_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_details_toolbar_layout"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/food_details_title">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/food_details_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_details_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/food_details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/food_name_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_food_name_hint"
                android:textSize="14sp"
                android:backgroundTint="@color/light_gray"
                android:inputType="textPersonName"
                android:autofillHints="name">
            </EditText>

            <LinearLayout
                android:id="@+id/food_details_date_time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/food_name_text_edit"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingBottom="15dp"
                android:gravity="center_horizontal"
                android:weightSum="12">

                <TextView
                    android:id="@+id/food_details_date_time_text"
                    android:layout_weight="4.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:text="@string/select_date_and_time_title"
                    android:textSize="13sp">
                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/food_details_date_layout"
                    android:layout_weight="4.5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"

                    app:boxBackgroundColor="@color/mid_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/food_details_date_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false"
                        android:inputType="date"
                        android:padding="10dp"
                        android:textSize="14sp">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/food_details_time_layout"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    app:boxBackgroundColor="@color/mid_gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/food_details_time_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false"
                        android:inputType="time"
                        android:padding="10dp"
                        android:textSize="14sp">
                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/food_details_images_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_details_card_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/images_title">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/food_details_images_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_details_images_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/food_details_images_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/food_details_pick_images_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:backgroundTint="@color/white"
                android:text="@string/pick_images"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="normal">
            </Button>

            <View
                android:layout_width="match_parent"
                android:layout_below="@+id/food_details_pick_images_button"
                android:layout_height="1dp"
                android:background="@color/mid_gray">
            </View>

            <Button
                android:id="@+id/food_details_selected_images_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/food_details_pick_images_button"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:backgroundTint="@color/white"
                android:text="@string/view_selected_images"
                android:textColor="@color/light_red"
                android:textSize="14sp"
                android:textStyle="normal"
                android:enabled="false">
            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/food_details_macros_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_details_images_card_view"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:text="@string/macros">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/macros_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_details_macros_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/food_details_macros_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/protein_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:gravity="center_vertical"
                android:hint="@string/protein"
                android:textSize="14sp"
                android:backgroundTint="@color/light_gray"
                android:inputType="numberDecimal"
                android:importantForAutofill="no">
            </EditText>

            <EditText
                android:id="@+id/carbs_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/protein_text_edit"
                android:paddingBottom="16dp"
                android:gravity="center_vertical"
                android:hint="@string/carbs"
                android:textSize="14sp"
                android:backgroundTint="@color/light_gray"
                android:inputType="numberDecimal"
                android:importantForAutofill="no">
            </EditText>

            <EditText
                android:id="@+id/fats_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carbs_text_edit"
                android:paddingBottom="16dp"
                android:gravity="center_vertical"
                android:hint="@string/fats"
                android:textSize="14sp"
                android:backgroundTint="@color/light_gray"
                android:inputType="numberDecimal"
                android:importantForAutofill="no">
            </EditText>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/food_details_save_entry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/macros_card_view"
        android:gravity="center"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:backgroundTint="@color/red"
        android:text="@string/save_entry"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:cornerRadius="5dp">
    </Button>

</RelativeLayout>